--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 !/log/.keep
 !/tmp/.keep
 
+
+#schema file ignore
+/db/schema.rb
+
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/
